[package]
name = "voice_harmonic_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
aberth = "0.4.1"
anyhow = "1.0.102"
atomic_float = "1.1.0"
bytemuck = "1.25.0"
cpal = "0.18.1"
crossbeam-utils = "0.8.21"
eframe = "0.34.3"
egui = "0.34.3"
env_logger = "0.11.10"
log = "0.4.32"
pollster = "0.4.0"
rtrb = "0.3.4"
triple_buffer = "9.0.0"
wgpu = "29.0.3"
