[package]
name = "voice_harmonic_engine"
version = "0.1.0"
edition = "2024"

# Shared across native + web (pure-Rust, wasm-compatible).
[dependencies]
aberth = "0.4.1"
anyhow = "1.0.102"
atomic_float = "1.1.0"
bytemuck = "1.25.0"
crossbeam-utils = "0.8.21"
eframe = "0.34.3"
egui = "0.34.3"
log = "0.4.32"
rtrb = "0.3.4"
triple_buffer = "9.0.0"

# Native desktop only: real audio I/O, GPU compute, blocking executor, logger.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.18.1"
wgpu = "29.0.3"
pollster = "0.4.0"
env_logger = "0.11.10"

# Web (wasm) only: browser bindings + panic hook for eframe's web backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "HtmlCanvasElement"] }
